# minikyu

./: .biomeignore  .env.example  .gitignore  .release-please.json  AGENTS.md  CHANGELOG.md  README.ja.md  README.ko.md  README.md  README.zh-CN.md  README.zh-TW.md  THIRD_PARTY_NOTICES.md  biome.json  components.json  index.html  lefthook.yml  mise.toml  package.json  player-window.html  tray-popover.html  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.json  statusline-command.sh
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: CONTRIBUTING.md  tasks.md
docs/developer/: README.md  architecture-guide.md  bun-usage.md  bundle-optimization.md  ci-cd-setup.md  command-system.md  cross-platform.md  data-persistence.md  external-apis.md  git-flow.md  git-hooks.md  i18n-lingui-best-practices.md  i18n-patterns.md  i18n-strategy.md  i18n.md  logging.md  menus.md  project-gaps.md  reader-immersive-translation.md  release-workflow.md  releases.md  rust-architecture.md  static-analysis.md  tauri-commands.md  tauri-plugins.md  testing.md  tray-icon.md  ui-patterns.md
docs/plans/: 2026-02-05-local-first-miniflux-sync.md  2026-02-17-merged-preferences-dialog-design.md  2026-02-17-merged-preferences-dialog-implementation.md  2026-02-18-immersive-reader-translation-design.md  2026-02-18-immersive-reader-translation-implementation.md  2026-02-19-splash-screen-design.md  2026-02-19-splash-screen-implementation.md  2026-02-20-llm-provider-prompt-field-design.md  2026-02-20-llm-provider-prompt-field-implementation.md  2026-02-20-translate-now-global-design.md  2026-02-20-translate-now-global-implementation.md  2026-02-20-translation-particle-edge-design.md  2026-02-20-translation-particle-edge-implementation.md  2026-02-20-translation-ux-enhancements-design.md  2026-02-20-translation-ux-enhancements-implementation.md  2026-02-21-miniflux-original-content-download-implementation.md  2026-02-22-in-app-browser-design.md  2026-02-22-in-app-browser-implementation.md  (+20 more)
e2e-tauri/: package.json  wdio.conf.mjs
scripts/: complete-task.js  mock-update-server.ts  prepare-apple-certificate.sh  prepare-release.js
src/: App.tsx  AppProviders.tsx  main.tsx  player-window-main.tsx  quick-pane-main.tsx  tray-popover-main.tsx
src-tauri/: Cargo.toml  gen_bindings.rs  tauri.ci.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json  player-window.json
src-tauri/icons/: icon.icns
src-tauri/src/: bindings.rs  lib.rs  types.rs
src-tauri/src/accounts/: error.rs  keyring.rs  mod.rs  tests.rs
src-tauri/src/cloud_sync/: debounce.rs  keyring.rs  mod.rs  s3.rs  s3.test.rs  webdav.rs
src-tauri/src/commands/: accounts.rs  accounts.test.rs  cloud_sync.rs  counters.rs  counters.test.rs  data.rs  downloads.rs  in_app_browser.rs  miniflux.rs  miniflux.test.rs  mod.rs  player_window.rs  podcast.rs  preferences.rs  quick_pane.rs  reading_state.rs  summarize.rs  sync.rs  sync.test.rs  translation.rs  translation.test.rs  translation_cache.rs  translation_router.test.rs  tray.rs
src-tauri/src/database/: connection.rs  migrations.rs  migrations.test.rs  mod.rs  schema.sql
src-tauri/src/database/migrations/: drop_users_table.rs
src-tauri/src/miniflux/: client.rs  counters.rs  mod.rs  types.rs
src-tauri/src/utils/: llm_stream.rs  logger.rs  mod.rs  serde_helpers.rs  str_utils.rs
src/i18n/: config.ts
(+295 files in other folders)
