[package]
name = "minikyu"
version = "1.3.0"
description = "A calm, focused space for your Miniflux reading"
authors = ["sinhong2011"]
license = "MIT"
edition = "2021"
rust-version = "1.90"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset",
  "macos-private-api",
  "tray-icon",
  "image-png",
  "unstable",
] }
tauri-plugin-opener = "2.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.149"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
tauri-plugin-log = "2.8.0"
tauri-plugin-notification = "2"
tauri-plugin-persisted-scope = "2.3.5"
tauri-plugin-process = "2"
tauri-plugin-os = "2"
tauri-plugin-global-shortcut = "2"
log = "0.4"
time = { version = "0.3.46", features = [
  "formatting",
  "local-offset",
  "macros",
] }
regex = "1"
dotenvy = "0.15"
tauri-plugin-mcp-bridge = "0.8.1"
tauri-plugin-webdriver = { version = "0.2", optional = true }

# Type-safe Tauri command bindings
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "=0.0.9"

# Database
sqlx = { version = "0.8", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "chrono",
  "uuid",
  "migrate",
] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Keyring for secure credential storage
keyring = { version = "3", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service",
] }
thiserror = "2"

# Cloud sync backends
rust-s3 = { version = "0.35", default-features = false, features = ["tokio-rustls-tls"] }
reqwest_dav = "0.3"

# HTTP client for Miniflux API
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
url = "2.5"
base64 = "0.22"
urlencoding = "2.1"
tokio = { version = "1", features = ["sync", "fs"] }
futures-util = "0.3"
tokio-util = { version = "0.7", features = ["rt"] }
bytes = "1.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.7"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"

# macOS-only: NSPanel for native panel behavior (fullscreen overlay, click-outside dismiss)
[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }

[features]
default = []
webdriver = ["tauri-plugin-webdriver"]

# Optimize for smaller binary size in release builds
[profile.release]
codegen-units = 1 # Better LLVM optimization (slower build, smaller binary)
lto = true        # Link-time optimizations
opt-level = "s"   # Optimize for size over speed
panic = "abort"   # Don't include panic unwinding code
strip = true      # Remove debug symbols
